--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "eslint \"**/*.js\"",
     "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install; fi",
     "scss": "sass --no-source-map --load-path=./ --update ./public/css:./public/css",
-    "lintStage": "node_modules/.bin/lint-staged"
+    "lintStage": "node_modules/.bin/lint-staged",
+    "build": "webpack --config webpack.config.js --mode production"
   },
   "lint-staged": {
     "*.js": [
@@ -72,6 +73,8 @@
     "patch-package": "^8.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "pug": "^3.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.69.3",
     "stripe": "^14.1.0",
     "twilio": "^4.18.1",
@@ -79,6 +82,10 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
     "chai": "^4.3.10",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -90,7 +97,9 @@
     "mongodb-memory-server": "^9.0.1",
     "nyc": "^15.1.0",
     "sinon": "^16.1.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "config": {
     "mongodbMemoryServer": {
